src/components/Map/Map.css
#map {
  height: calc(100vh);
  width: 100%;
}

.marker-label {
  font-family: "Montserrat", sans-serif !important;
  text-align: center;
  color: white !important;
  transform: translate(25%, -0.5em);
  font-size: 0.7em !important;
  font-weight: 400 !important;
  padding: 4px;
  border-radius: 100px;
}

.gmnoprint {
  display: none;
}

.gm-style-cc {
  display: none;
}

.marker-label--k {
  background-color: magenta;
}

.marker-label--g {
  background-color: green;
}
.marker-label--u {
  background-color: blue;
}
.marker-label--m {
  background-color: red;
}

.marker-label--p {
  background-color: cyan;
}

